# Crystal

./: .gitignore  .gitmodules  README.md  TODO.txt  build.py  crystal.sln
AndroidStudio/: README.md  settings.gradle.kts
AndroidStudio/app/: .gitignore  CMakeLists.txt  build.gradle.kts
AndroidStudio/app/src/androidTest/java/com/example/androidcrystal/: ExampleInstrumentedTest.java
AndroidStudio/app/src/main/: AndroidManifest.xml
AndroidStudio/app/src/main/assets/package/: main.cc
AndroidStudio/app/src/main/assets/package/shader/glsl3es/: displayFragment.glsl  displayVertex.glsl
AndroidStudio/app/src/main/assets/package/shader/glsl4/: displayFragment.glsl
AndroidStudio/app/src/main/java/com/example/androidcrystal/: MainActivity.java
AndroidStudio/app/src/main/res/layout/: activity_main.xml
AndroidStudio/app/src/main/res/values/: strings.xml  themes.xml
AndroidStudio/app/src/main/res/values-night/: themes.xml
AndroidStudio/app/src/test/java/com/example/androidcrystal/: ExampleUnitTest.java
AndroidStudio/gradle/wrapper/: gradle-wrapper.properties
editor/: console.cc  editor.cc  entityPanel.cc  include.hh  materialPanel.cc  tracker.cc  vision.cc
game/: addComponent.cc  components.cc  include.hh  map.cc  mem.cc  renderBuffer.cc
include/: basic.hh  checks.hh  componentID.hh  components.hh  console.hh  crystal.hh  ds.hh  enginePointers.hh  event.hh  framebuffer.hh  game.hh  gamee.hh  layer.hh  log.hh  map.hh  material.hh  mem.cc  mem.hh  renderer.hh  scene.cc  scene.hh  screenQuad.hh  shader.hh  utils.hh
package/: main.cc
package/shader/: displayFragment.glsl  displayVertex.glsl  fragment.glsl  vertex.glsl
package/shader/glsl3es/: displayFragment.glsl  displayVertex.glsl  fragment.glsl  vertex.glsl
package/shader/glsl4/: displayVertex.glsl  fragment.glsl  vertex.glsl
sandbox/: build.py  sandbox.cc  woa.ms
sandbox/src/: include.hh  sandbox.cc
src/: box2d.cc  box2dFiles.cc  box2dInclude.cc  camera.cc  components.cc  config.hh  crystal.cc  crystal.hh  ds.cc  entryPoint.cc  event.cc  game.cc  gameLayer.cc  include.hh  layer.cc  log.cc  log.hh  material.cc  mem.cc  package.hh  physics.cc  scene.cc  serialize.cc  setupPointers.hh  utils.cc
src/Android/: code.cc  entryPoint.cc  include.hh  log.cc  package.cc  utils.cc  window.cc
src/Editor/: console.cc  editor.cc  entityPanel.cc  include.hh  vision.cc
src/Renderer/: batch.cc  debug.cc  debugGL.cc  draw.cc  framebuffer.cc  include.hh  material.cc  openGL.cc  renderBuffer.cc  renderer.cc  renderer.hh  screenQuad.hh  shader.cc  shaderSystem.cc  texture.cc
src/Windows/: code.cc  context.cc  entryPoint.cc  imgui.cc  imguiFiles.cc  include.hh  log.cc  main.cc  package.cc  trialLayer.cc  utils.cc  utilsWin.hh  window.cc
